force-app/main/default/objects/Lead_Response_Event__e/Lead_Response_Event__e.object-meta.xml
<CustomObject>
    <description>Lead Response Event</description>
    <label>Lead Response Event</label>
    <pluralLabel>Lead Response Events</pluralLabel>
</CustomObject>