force-app/main/default/objects/Lead_Response_Event__e/fields/Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date__c</fullName>
    <description>Activity Date</description>
    <label>Activity Date</label>
    <type>Date</type>
</CustomField>