force-app/main/default/objects/Lead_Response_Event__e/fields/Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Campaign Code of Campaign associated to Lead</description>
    <label>Campaign Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>