force-app/main/default/objects/Lead_Response_Event__e/fields/CLG_ID__c.field-meta.xml
<CustomField>
    <fullName>CLG_ID__c</fullName>
    <description>Source System Id of Account associated to Lead</description>
    <label>CLG ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>