force-app/main/default/objects/Lead_Response_Event__e/fields/Created_By_Lan_Id__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Lan_Id__c</fullName>
    <description>Created By Lan Id of Task</description>
    <label>Created By Lan Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>