force-app/main/default/objects/Lead_Response_Event__e/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <description>Created Date on Task</description>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>