force-app/main/default/objects/Lead_Response_Event__e/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <description>Customer Number in Account</description>
    <label>Customer Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>