force-app/main/default/objects/Lead_Response_Event__e/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>Customer Type - Company / Individual / Prospect / CLG</description>
    <label>Customer Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>