force-app/main/default/objects/Lead_Response_Event__e/fields/Lead_Originator__c.field-meta.xml
<CustomField>
    <fullName>Lead_Originator__c</fullName>
    <description>Lead Originator on Lead</description>
    <label>Lead Originator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>