force-app/main/default/objects/Lead_Response_Event__e/fields/Lead_Owner_LAN_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_LAN_ID__c</fullName>
    <description>Lead Owner LAN ID</description>
    <label>Lead Owner LAN ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>