force-app/main/default/objects/Lead_Response_Event__e/fields/Outcome_Reason__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Reason__c</fullName>
    <description>Outcome Reason on Task</description>
    <label>Outcome Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>