force-app/main/default/objects/Lead_Response_Event__e/fields/Prospect_ID__c.field-meta.xml
<CustomField>
    <fullName>Prospect_ID__c</fullName>
    <description>Prospect Id of lead</description>
    <label>Prospect ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>