force-app/main/default/objects/Lead_Response_Event__e/fields/Response_ID__c.field-meta.xml
<CustomField>
    <fullName>Response_ID__c</fullName>
    <description>Task ID</description>
    <label>Response ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>