force-app/main/default/objects/Lead_Response_Event__e/fields/Response_Status__c.field-meta.xml
<CustomField>
    <fullName>Response_Status__c</fullName>
    <description>Response Status on Task</description>
    <label>Response Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>