force-app/main/default/objects/Lead_Response_Event__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lead Status</description>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>