force-app/main/default/objects/Lead_Response_Event__e/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Subject on Task</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>